# teenygrad

./: .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  README.md  netlify.toml
.github/workflows/: CI.yml
book/: book.toml  rust-toolchain.toml
book/src/: 1.md  2.md  3.md  SUMMARY.md  bib.md  dedi.md  epi.md  front.md  pref.md  pro.md  ref.md
book/theme/: index.hbs
book/theme/css/: custom.css  variables.css
book/theme/js/: custom.js
examples/: 1.6-spaces.py  1.6-vspace.py  1.7-normedvspace.py  abstractions.py  tensor.py
python/teenygrad/frontend/: tensor.py
rust/: Cargo.toml  build.rs
rust/gpu_device/: Cargo.toml
rust/src/: gpu_host.rs  lib.rs  main.rs
sitp/: README.md  book.toml  rust-toolchain.toml
sitp/src/: 1.md  2.md  3.md  SUMMARY.md  ap.md  dedi.md  epi.md  front.md  pref.md  pro.md  ref.md
sitp/src/assets/: rooflinejupiter.html
sitp/src/assets/elizabot/: eliza-widget.js
sitp/src/assets/gpt2/: gpt2-widget.js
sitp/theme/css/: custom.css  general.css
sitp/theme/fonts/: fonts.css
sitp/theme/js/: custom.js
teeny/: Dockerfile  dcr.sh  dex.sh  pyproject.toml  rust-toolchain.toml
teeny/eagkers/: Cargo.toml  build.rs  test_rust_cuda.py
teeny/eagkers/benches/: bench_cblas.rs  bench_cpu.rs  bench_divan.rs
teeny/eagkers/gpu_device/: Cargo.toml
teeny/eagkers/src/: blas.rs  cblas.rs  cpu.rs  gpu_host.rs  lapack.rs  lib.rs  main.rs
teeny/eagkers/src_device/: Cargo.toml
teeny/eagkers/src_device/src/: gpu_device.rs  lib.rs
teeny/eagkers/tests/: test_cblas.rs  test_lapack.rs
teeny/examples/: 4.1-makemore-ngram-np.py  4.1-makemore-ngram-teeny.py  4.1-makemore-ngram.py  4.2-makemore-ffn1layer-torch.py  4.3-makemore-ffn-torch.py  makemore_mlp.py  pyproject.toml
teeny/python/teenygrad/: __init__.py
teeny/python/teenygrad/compiler/: __init__.py  compiler.py  dslir.py  opnode.py
teeny/python/teenygrad/frontend/: tensor.py
teeny/python/teenygrad/runtime/: cuda_runtime.py  device.py  hip_runtime.py  host_runtime.py
teeny/python/teenygrad/tests/: test_correct.py  test_speed.py
teeny/python/tests/: test_torch_autograd.py
teeny/rust/: Cargo.toml  rust-toolchain.toml
teeny/rust/benches/: bench_cpu.rs
teeny/rust/src/: cpu.rs  lib.rs  main.rs
teeny/teenygrad/: __init__.py  dtype.py  eagker.py  helpers.py
teeny/teenygrad/compiler/: compiler.py  dslir.py  opnode.py
teeny/teenygrad/eager/: optim.py  tensor.py  tensor_compiled.py
teeny/teenygrad/frontend/: nn.py
teeny/teenygrad/runtime/: cuda_runtime.py  device.py  hip_runtime.py  host_runtime.py
teeny/tests/: test_torch_autograd.py
