[package]
name = "src_device"
version = "0.1.0"
edition = "2024"

[dependencies]
cuda_std = { git = "https://github.com/rust-gpu/rust-cuda" }

[lib]
crate-type = ["cdylib", "rlib"] # cdylib, because the nvptx targets do not support binary crate types
                                # rlib, so the `kernels` crate can be used as a dependency by `rust-cuda-basic`